@@ -6,7 +6,8 @@ TESTS=	hash_test1 \
 	hash_test6 \
 	stack_test \
 	list_test \
-	queue_test
+	queue_test \
+	array_test
 noinst_PROGRAMS=$(TESTS)
 hash_test1_SOURCES=hash_test1.cc
 hash_test2_SOURCES=hash_test2.cc
@@ -22,5 +23,6 @@ hash_test6_LDADD=../libcontain.la -lstdc++
 stack_test_LDADD=../libcontain.la -lstdc++
 list_test_LDADD=../libcontain.la -lstdc++
 queue_test_LDADD=../libcontain.la -lstdc++
+array_test_LDADD=../libcontain.la
 AM_CFLAGS=-g
 
