@@ -1,3 +1,12 @@
+2004-03-25	blytkerchan
+	* array.h: new file
+	* array.c: ditto
+	* tests/array_test.c: ditto
+	* Makefile.am [libcontain_la_SOURCES]: add array.c
+	[pkginclude_HEADERS]: add array.h
+	* tests/Makefile.am [TESTS]: add array_test
+	[array_test_LDADD]: new variable
+
 2004-03-22	blytkerchan
 	* hash.h [hash_t]: new type
 	[libhash_hashtype]: add GLIB_HASH hash type
